Refactor controllers and services for dependency injection 🧰